deploy/helm-debug.yml
# Source: alidns-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alidns
  labels:
    app: alidns
    chart: alidns-webhook-0.1.0
    release: plundering-deer
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: alidns
    release: plundering-deer
---
# Source: alidns-webhook/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: alidns
  labels:
    app: alidns
    chart: alidns-webhook-0.1.0
    release: plundering-deer
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alidns
      release: plundering-deer
  template:
    metadata:
      labels:
        app: alidns
        release: plundering-deer
    spec:
      serviceAccountName: alidns
      containers:
        - name: alidns-webhook
          image: "tttlkkkl/cert-manage-alidns:latest"
          imagePullPolicy: Always
          args:
            - --tls-cert-file=/tls/tls.crt
            - --tls-private-key-file=/tls/tls.key
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          volumeMounts:
            - name: certs
              mountPath: /tls
              readOnly: true
          resources:
            {}
            
      volumes:
        - name: certs
          secret:
            secretName: alidns-webhook-tls
