deploy/k8s.yml
#igress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik 
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
  name: nginx-ingress
spec:
  rules:
    - host: "xx.lihuaio.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: li
              servicePort: 80
  tls:
    - hosts:
        - '*.lihuaio.com'
      secretName: lihuaio.com
---
# nginx -- hello word
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-hello-word
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-hello-word
    spec:
      containers:
      - name: nginx-hello-word
        image: nginx:1.17.3-alpine
---
# nginx hello word service
kind: Service
apiVersion: v1
metadata:
  name:  nginx-hello-word
spec:
  selector:
    app:  svc-nginx-hello-word
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
